--- a/Main.tex
+++ b/Main.tex
@@ -1,4 +1,15 @@
 \documentclass{XDUthesis} %[draft
+\usepackage{algorithmic,algorithm}
+\usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage{hyperref}
+\usepackage{float}
+\usepackage{subcaption}
+\usepackage{bm}
+
+\newtheorem{mydef}{\emph{Definition}}
+\restylefloat{table}
 
 \title{科学数据的序列分类}
 \author{刘精昌}
