--- a/ThesisFiles/RefFile.bib
+++ b/ThesisFiles/RefFile.bib
@@ -229,17 +229,23 @@ year = {2009}
    title = {UCR Computational Anthropology Site},
    howpublished = {\url{http://www.cs.ucr.edu/~eamonn/anthropology/}}
 }
-@article{Salvador2007,
-abstract = {The dynamic time warping (DTW) algorithm is able to find the optimal alignment between two time series. It is often used to determine time series similarity, classification, and to find corresponding regions between two time series. DTW has a quadratic time and space complexity that limits its use to only small time series data sets. In this paper we introduce FastDTW, an approximation of DTW that has a linear time and space complexity. FastDTW uses a multilevel approach that recursively projects a solution from a coarse resolution and refines the projected solution. We prove the linear time and space complexity of FastDTW both theoretically and empirically. We also analyze the accuracy of FastDTW compared to two other existing approximate DTW algorithms: Sakoe-Chuba Bands and Data Abstraction. Our results show a large improvement in accuracy over the existing methods.},
-author = {Salvador, Stan and Chan, Philip},
-file = {:E$\backslash$:/毕业设计/Salvador2004.pdf:pdf},
-issn = {1088467X},
-journal = {Intelligent Data Analysis},
-keywords = {dynamic time warping,time series},
+
+@misc{UCR_data,
+   author = {Yanping Chen, Eamonn Keogh, Bing Hu.},
+   title = {The UCR Time Series Classification Archive.},
+   howpublished = {\url{http://www.cs.ucr.edu/~eamonn/time_series_data/}}
+}
+
+@article{Ratanamahatana2005,
+abstract = {The Dynamic Time Warping (DTW) distance measure is a technique that has long been known in speech recognition community. It allows a non-linear mapping of one signal to another by minimizing the distance between the two. A decade ago, DTW was introduced into Data Mining community as a utility for various tasks for time series problems including classification, clustering, and anomaly detection. The technique has flourished, particularly in the last three years, and has been applied to a variety of problems in various disciplines. In spite of DTW's great success, there are still several persistent “myths” about it. These myths have caused confusion and led to much wasted research effort. In this work, we will dispel these myths with the most comprehensive set of time series experiments ever conducted.},
+author = {Ratanamahatana, Chotirat Ann and Keogh, Eamonn},
+doi = {http://dx.doi.org/10.1137/1.9781611972757.50},
+file = {:E$\backslash$:/毕业设计/RatanamC.pdf:pdf},
+isbn = {978-0-89871-593-4},
+journal = {Proceedings of the 2005 SIAM International Conference on Data Mining},
+keywords = {data mining,dynamic time warping,experimentation},
 mendeley-groups = {毕业设计},
-pages = {561--580},
-title = {{FastDTW : Toward Accurate Dynamic Time Warping in Linear Time and Space}},
-url = {http://www.cs.fit.edu/{~}pkc/papers/tdm04.pdf},
-volume = {11},
-year = {2007}
+pages = {5},
+title = {{Three Myths about Dynamic Time Warping Data Mining}},
+year = {2005}
 }
