--- a/Main.tex
+++ b/Main.tex
@@ -15,13 +15,13 @@
 \author{刘精昌}
 \date{}
 %题目拆分：用于封面
-\septitleA{基于\XDUthesis{} 模板的}%如果论文题目长度<=11中文字符只需填此项即可B项空着
-\septitleB{论文写作样例}%如果论文题目长度>11中文字符, 建议拆分为10+x or 11+x 将剩余x个字符填在此处。
-\class{0712**}%班级号
-\schoolnumber{0712****}%学号
+\septitleA{科学数据的序列分类}%如果论文题目长度<=11中文字符只需填此项即可B项空着
+\septitleB{}%如果论文题目长度>11中文字符, 建议拆分为10+x or 11+x 将剩余x个字符填在此处。
+\class{071271}%班级号
+\schoolnumber{07127026}%学号
 \major{统计学}%专业
 \school{数学与统计学院}%学院
-\supervisor{崔元顺}%指导老师
+\supervisor{徐林莉}%指导老师
 
 \begin{document}
 
