--- a/ThesisFiles/RefFile.bib
+++ b/ThesisFiles/RefFile.bib
@@ -184,7 +184,21 @@ pages = {103--134},
 title = {{Text Classification from Labeled and Unlabeled Documents using EM}},
 volume = {34},
 year = {2000}
+}@article{Salvador2007,
+abstract = {The dynamic time warping (DTW) algorithm is able to find the optimal alignment between two time series. It is often used to determine time series similarity, classification, and to find corresponding regions between two time series. DTW has a quadratic time and space complexity that limits its use to only small time series data sets. In this paper we introduce FastDTW, an approximation of DTW that has a linear time and space complexity. FastDTW uses a multilevel approach that recursively projects a solution from a coarse resolution and refines the projected solution. We prove the linear time and space complexity of FastDTW both theoretically and empirically. We also analyze the accuracy of FastDTW compared to two other existing approximate DTW algorithms: Sakoe-Chuba Bands and Data Abstraction. Our results show a large improvement in accuracy over the existing methods.},
+author = {Salvador, Stan and Chan, Philip},
+file = {:E$\backslash$:/毕业设计/Salvador2004.pdf:pdf},
+issn = {1088467X},
+journal = {Intelligent Data Analysis},
+keywords = {dynamic time warping,time series},
+mendeley-groups = {毕业设计},
+pages = {561--580},
+title = {{FastDTW : Toward Accurate Dynamic Time Warping in Linear Time and Space}},
+url = {http://www.cs.fit.edu/{~}pkc/papers/tdm04.pdf},
+volume = {11},
+year = {2007}
 }
+
 
 @article{Xi2006,
 abstract = {Many algorithms have been proposed for the problem of time series classification. However, it is clear that one-nearest-neighbor with Dynamic Time Warping (DTW) distance is exceptionally difficult to beat. This approach has one weakness, however; it is computationally too demanding for many realtime applications. One way to mitigate this problem is to speed up the DTW calculations. Nonetheless, there is a limit to how much this can help. In this work, we propose an additional technique, numerosity reduction, to speed up one-nearest-neighbor DTW. While the idea of numerosity reduction for nearest-neighbor classifiers has a long history, we show here that we can leverage off an original observation about the relationship between dataset size and DTW constraints to produce an extremely compact dataset with little or no loss in accuracy. We test our ideas with a comprehensive set of experiments, and show that it can efficiently produce extremely fast accurate classifiers.},
