--- a/ThesisFiles/Thanks.tex
+++ b/ThesisFiles/Thanks.tex
@@ -1,3 +1,3 @@
 \begin{thanksfor}
-虽为致谢环境，其实就是一个Chapter，为啥这么费事？因为，致谢一章没有编号。直接使用 \verb=\chapter*{}=的话，页眉又不符合工作手册要求，而且要往目录中添加该章节，还需要添加两行代码；为了简单快捷的设计出符合要求，又方便用户使用，只能借 \verb=\backmatter= 模式和本模板自定义的 \verb=\comtinuematter= 模式配合环境来做了。
-\end{thanksfor}
+    这次的毕业论文设计总结是在我的指导老师徐林莉老师亲切关怀和悉心指导下完成的。从毕业设计选题到设计完成，徐老师给予了我耐心指导与细心关怀，在此表示感谢。徐老师有严肃的科学态度，严谨的治学精神和精益求精的工作作风，这些都是我所需要学习的!感谢研究组里提供的优良的科研资源，这让我享受到了难忘的学习时光，感谢师兄们的指导。另外，也特别感谢崔元顺同学提供的latex模板。
+\end{thanksfor} 
