--- a/Main.tex
+++ b/Main.tex
@@ -11,11 +11,11 @@
 \newtheorem{mydef}{\emph{Definition}}
 \restylefloat{table}
 
-\title{科学数据的序列分类}
+\title{科学数据中的序列分类}
 \author{刘精昌}
 \date{}
 %题目拆分：用于封面
-\septitleA{科学数据的序列分类}%如果论文题目长度<=11中文字符只需填此项即可B项空着
+\septitleA{科学数据中的序列分类}%如果论文题目长度<=11中文字符只需填此项即可B项空着
 \septitleB{}%如果论文题目长度>11中文字符, 建议拆分为10+x or 11+x 将剩余x个字符填在此处。
 \class{071271}%班级号
 \schoolnumber{07127026}%学号
